--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>John Smith</title>
+    <title>Ali Mohammadinezhad</title>
     <link rel="stylesheet" href="main.css" />
     <link
       rel="stylesheet"
