--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <ul>
             <li>
               <i class="fa fa-briefcase"></i>
-              <span>Back-end Developer</span>
+              <span>Software Engineer</span>
             </li>
             <li>
               <i class="fa fa-home"></i>
