--- a/index.html
+++ b/index.html
@@ -118,6 +118,12 @@
               <div class="progress-bar pg90">90%</div>
             </div>
           </div>
+          <div class="skill-item">
+            <b>(git, github, gitlab)</b>
+            <div class="progress-box">
+              <div class="progress-bar pg90">90%</div>
+            </div>
+          </div>
           <h4>Data science</h4>
           <div class="skill-item">
             <b>numpy</b>
